# parser_site_hh_supj

./: .gitignore  README.md  main.py  pyproject.toml
abstract/src/: __init__.py  exception.py  getdatasearch.py
hh/file_json_for_work_programm/: __init__.py  file_for_user.json  file_for_user_hh.json  vacation_for_filter.json  vacation_for_filter_hh.json
hh/files_help_params/: area_id.json  dictionaries.json  industries.json  per_page_vac_count_5.json  professional_roles.json  search_area_test_func.py
hh/src/: analysisofdataHH.py  exception.py  get_object_json.py  getdatasearchhh.py  helper.py  main.py  params_url.py  qwe.py  script_work_programm.py  talk_for_user.py  vacation_for_filter  vacation_for_filter.json
hh/test_func/: get_object_json.py  helper.py  tbl.json
sj/file_json_for_work_programm/: __init__.py  file_for_user_sj.json  vacation_for_filter_sj.json
sj/files_help_params/: dictionaries.json
sj/src/: getdatasearchsj.py
src_and_file/file_json_for_work_programm/: __init__.py  file_for_user.json  vacation_for_filter.json
src_and_file/src/: __init__.py  func_for_work_json.py  script_work_programm.py  talk_for_user.py
