[tool.poetry]
name = "parser_site_hh_supj"
version = "0.1.0"
description = ""
authors = ["Egor Shievanov <shievanov@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
isodate = "^0.6.1"
objectpath = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
